--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "App\\Models\\": "app/Models/" 
         }
     },
     "autoload-dev": {
